Update h1 intro style, add extension
Signed-off-by: Marc Duiker <marcduiker@users.noreply.github.com>

--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -13,7 +13,7 @@ widths: [400, 520]
   <header class="full | section" style="--spot-color: var(--color-secondary)">
     {% svg "divider/soft-top", null, "seperator" %}
     <div class="section__inner flow region">
-      <h1 class="text-center text-base-light">{{ meta.siteDescription }}</h1>
+      <h1 class="text-center text-base-light intro">{{ meta.siteDescription }}</h1>
     </div>
 
     {% svg "divider/soft-bottom", null, "seperator" %}
