--- a/src/assets/css/global/base/fonts.css
+++ b/src/assets/css/global/base/fonts.css
@@ -1,29 +1,29 @@
 @font-face {
-  font-family: 'Inclusive Sans';
+  font-family: 'Verdana';
   font-style: normal;
   font-display: swap;
   font-weight: 400;
   src:
     local(''),
-    url('/assets/fonts/inclusive/inclusivesans-regular.woff2') format('woff2');
+    url('/assets/fonts/Verdana.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: 'Inclusive Sans';
+  font-family: 'Verdana';
   font-style: italic;
   font-display: swap;
   font-weight: 400;
   src:
     local(''),
-    url('/assets/fonts/inclusive/inclusivesans-italic.woff2') format('woff2');
+    url('/assets/fonts/Verdana.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: 'Redhat';
+  font-family: 'Rockwell';
   font-style: normal;
   font-display: swap;
   font-weight: 900;
   src:
     local(''),
-    url('/assets/fonts/redhat/red-hat-display-v7-latin-900.woff2') format('woff2');
+    url('/assets/fonts/rockwell-regular.woff2') format('woff2');
 }
