--- a/src/assets/css/bundle/custom-card.css
+++ b/src/assets/css/bundle/custom-card.css
@@ -1,7 +1,7 @@
 custom-card {
   --gutter: var(--space-xs-s);
   background-color: var(--card-bg, var(--color-bg-accent));
-  border: 4px solid var(--color-bg-accent);
+  border: 4px solid var(--color-bg-accent-2);
   color: var(--color-text);
   padding: var(--space-s-m);
   border-radius: var(--border-radius);
@@ -71,7 +71,7 @@ custom-card :is(a, p, h2, h3) {
 
 custom-card[no-padding] {
   background-color: transparent;
-  border: 4px solid var(--color-bg-accent);
+  /* border: 4px solid var(--color-bg-accent); */
   padding: 0;
   border-radius: none;
 }
@@ -86,7 +86,7 @@ custom-card[img-square] img {
 
 custom-card[clickable]:hover,
 custom-card[clickable]:focus-within {
-  border: 4px solid var(--color-primary);
+  border: 4px solid var(--color-secondary);
 }
 
 custom-card[clickable]:focus-within a:focus {
@@ -94,6 +94,8 @@ custom-card[clickable]:focus-within a:focus {
 }
 custom-card[clickable] {
   position: relative;
+  border: 4px solid var(--color-primary);
+
 }
 custom-card[clickable] a:after {
   bottom: 0;
