--- a/src/assets/css/global/blocks/site-footer.css
+++ b/src/assets/css/global/blocks/site-footer.css
@@ -21,7 +21,8 @@
 
 .site-footer .creator {
   font-size: var(--size-step-min-1);
-  margin-block-start: var(--space-xl);
+  font-style: italic;
+  margin-block-start: var(--space-l);
   display: grid;
   place-items: center;
 }
