--- a/src/common/og-images.njk
+++ b/src/common/og-images.njk
@@ -1,6 +1,6 @@
 ---
 fontDisplay: "'Rockwell', Ubuntu" # needed created in local development, font must be installed on your system.
-fontBody: "'Verdana', Ubuntu" # needed created in local development, font must be installed on your system.
+fontBody: "'Roboto', Ubuntu" # needed created in local development, font must be installed on your system.
 background: '#343434'
 text: '#FBFBFB'
 colors: ['#0095e9', '#124e89', '#f77622', '#feae34']
