--- a/src/_includes/head/preloads.njk
+++ b/src/_includes/head/preloads.njk
@@ -6,6 +6,30 @@
   crossorigin
 />
 
+<link
+  rel="preload"
+  href="/assets/fonts/roboto-italic.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin
+/>
+
+<link
+  rel="preload"
+  href="/assets/fonts/roboto-bold.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin
+/>
+
+<link
+  rel="preload"
+  href="/assets/fonts/roboto-regular.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin
+/>
+
 <!-- preloads in page data -->
 {%- if preloads -%}
   <!-- prettier-ignore -->
