--- a/src/_includes/partials/theme-switch.njk
+++ b/src/_includes/partials/theme-switch.njk
@@ -1,7 +1,7 @@
 <is-land on:idle
   ><div
     role="region"
-    class="theme-switch | cluster mt-xs"
+    class="theme-switch | cluster mt-l"
     style="--cluster-horizontal-alignment: center; --gutter: 0.5rem"
     aria-labelledby="theme-switcher-label"
     data-theme-switcher
