--- a/src/assets/css/global/blocks/prose.css
+++ b/src/assets/css/global/blocks/prose.css
@@ -15,6 +15,7 @@
   padding-block-end: var(--space-xs);
   margin-block-end: var(--space-s);
   border-bottom: 1px solid var(--color-bg-accent);
+  font-style: italic;
 }
 
 :where(.prose :is(h2, h3, h4)) {
