Add Eleventy post
Signed-off-by: Marc Duiker <marcduiker@users.noreply.github.com>

--- a/src/assets/css/global/base/global-styles.css
+++ b/src/assets/css/global/base/global-styles.css
@@ -95,7 +95,7 @@ svg {
 b,
 strong {
   font-weight: var(--font-extra-bold);
-  font-family: var(--font-display);
+  font-family: var(--font-base);
 }
 
 /* Horizontal rule */
