--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -1,8 +1,8 @@
 ---
 layout: base
 permalink: /index.html
-title: 'Marc Duiker: I ❤️ OSS, Improving DevEx, Handcrafted Generative Art & Pixel Art'
-description: 'Welcome to the personal website of Marc Duiker, a creative technologist who enjoys helping people to achieve more every day.'
+title: 'Marc Duiker: I ❤️ OSS, Improving Developer Experience, Drawing Pixel Art, and Handcrafting Generative Art'
+description: 'The personal website of Marc Duiker, a creative technologist who enjoys helping people to achieve more every day.'
 blog:
   title: 'Latest articles'
 sizes: '(max-width: 615px) 50vw, 100vw'
