Add sessionize to About
Signed-off-by: Marc Duiker <marcduiker@users.noreply.github.com>

--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -19,7 +19,11 @@ widths: [360]
       {% endfor %}
       </div>
       <p>Professionally I work as a Sr Developer Advocate at <a href="https://diagrid.io">Diagrid</a>, where I focus on improving the developer experience for the <a href="https://dapr.io">Dapr OSS project</a>.</p>
-      <p>I've been active in developer communities since 2012. I have a long history with .NET, Azure, serverless ⚡️, and event-driven architectures ✉️. For the last two years I've been creating content about Dapr, the Distributed Application Runtime, and leading the community management acitivies for the project.</p>
+      <p>I've been active in developer communities since 2012.
+        I have a long history with .NET, Azure, serverless ⚡️, and event-driven architectures ✉️.
+        Over the last decade, I've been a co-organizer, MC, or speaker at many conferences across Europe.
+        See my <a href="https://sessionize.com/marcduiker#sessions">Sessionize profile</a> for a list of sessions I can give at your event.
+        For the last two years I've been creating content about Dapr, the Distributed Application Runtime, and leading the community management acitivies for the project.</p>
       <p>My creative side has many facets. I enjoy hand-coding visual and interactive experiences with JavaScript, drawing pixel art, and creating soundscapes with my modular synth 🎛️.</p>
       <p>If you want to be more involved in developer communities and don't know where to start, feel free to reach out to me. You can also ping me if you want to submit a session to a conference and would like to have your CfP or presentation reviewed.</p>
 
