Update meta and default og
Signed-off-by: Marc Duiker <marcduiker@users.noreply.github.com>

--- a/src/common/humans.njk
+++ b/src/common/humans.njk
@@ -4,7 +4,7 @@ eleventyExcludeFromCollections: true
 excludeFromSitemap: true
 ---
 
-/* TEAM */ Developer: {{ meta.creator.name }} Contact: {{ meta.creator.email }} Site:
+/* TEAM */ Developer: {{ meta.creator.name }} Site:
 {{ meta.creator.website }}
 {% if meta.creator.social %}
   Find me on: {{ meta.creator.social }}
