--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -4,7 +4,7 @@ permalink: /index.html
 title: 'Marc Duiker: I ❤️ OSS, Improving Developer Experience, Drawing Pixel Art, and Handcrafting Generative Art'
 description: 'The personal website of Marc Duiker, a creative technologist who enjoys helping people to achieve more every day.'
 blog:
-  title: 'Latest articles'
+  title: 'Latest Articles'
 sizes: '(max-width: 615px) 50vw, 100vw'
 widths: [400, 520]
 ---
