Add knight rider, fix typo
Signed-off-by: Marc Duiker <marcduiker@users.noreply.github.com>

--- a/src/pages/pixel-art.njk
+++ b/src/pages/pixel-art.njk
@@ -7,7 +7,7 @@ sizes: '(max-width: 615px) 50vw, 100vw'
 widths: [400, 520]
 ---
 
-<article class="full  section" style="--spot-color: var(--color-bg-accent)">
+<article class="full section" style="--spot-color: var(--color-bg-accent)">
   {% svg "divider/soft-top", null, "seperator" %}
 
   <section class="feature section__inner wrapper">
@@ -29,8 +29,13 @@ widths: [400, 520]
         </custom-card>
       {% endfor %}
     </div>
+    <p>
+    Most of the pixel art I make is completely for fun and are personal projects or open source contributions such as <a href="https://marketplace.visualstudio.com/items?itemName=tonybaloney.vscode-pets">VSCode Pets</a>.</p>
+    <p>Occasionally, I do commissioned work as well, if you're interested in this, please visit my <a href="https://ko-fi.com/marcduiker/commissions">Ko-fi page</a>.
+    </p>
   </section>
 
+ 
   {% svg "divider/soft-bottom", null, "seperator" %}
 </article>
 
